--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,12 @@ pool:
   vmImage: windows-latest
 
 steps:
+- task: JavaToolInstaller@0
+ inputs:
+   versionSpec: '17'
+   jdkArchitectureOption: 'x64'
+   jdkSourceOption: 'PreInstalled'
+
 - task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
@@ -19,3 +25,4 @@ steps:
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
+
