--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,20 @@ steps:
     jdkArchitectureOption: "x64"
     publishJUnitResults: true
     testResultsFiles: "cucumber.html"
-    goals: "package"
+    goals: "clean test"
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
+- task: PublishPipelineArtifact@1
+  displayName: 'Publish Pipeline Artifact'
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+    artifact: drop
+    publishLocation: 'pipeline'
+
+
+- task: publishhtmlreport@1
+  displayName: 'HTML Report'
+  inputs:
+    reportDir: 'cucumber.html'
