--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,6 +1,6 @@
-basefolder.name=test-output/ExtentReport
+basefolder.name=Reports/ExtentReport
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/Spark.html
+extent.reporter.spark.out=spark.html
 screenshot.dir=test-output/SparkReport/screenshots
 screenshot.rel.path=./screenshots/
