--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
 - task: PublishPipelineArtifact@1
   displayName: 'Publish Pipeline Artifact'
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
+    targetPath: 'target'
     artifact: 'targetfolderdetails'
     publishLocation: 'pipeline'
 
